raw/futures-rs-test-all--2016-11-09-12-29-18--2.log
commit bca365e688f0424fb99d38d477a9b7863bb070d3
Merge: 02aa428 a449bdb
Author: bors <bors@rust-lang.org>
Date:   Wed Nov 9 08:51:23 2016 -0800

    Auto merge of #36520 - estebank:dataless-enum, r=brson
    
    Reword error when data-less enum variant called as function
    
    Given a file like:
    
    ``` rust
    enum Test {
        Variant,
        Variant2 {a: u32},
    }
    
    fn main(){
        let x = Test::Variant("Hello");
        let y = Test::Variant2("World");
    }
    ```
    
    Both errors now look similar:
    
    ``` bash
    error[E0423]: `Test::Variant2` is the name of a struct or struct variant, but this expression uses it like a function name
      --> file3.rs:10:13
       |
    10 |     let y = Test::Variant2("Hello");
       |             ^^^^^^^^^^^^^^ struct called like a function
       |
       = help: did you mean to write: `Test::Variant2 { /* fields */ }`?
    
    error: `Test::Variant` is the name of a data-less enum, but this expression uses it like a function name
     --> file3.rs:9:13
      |
    9 |     let x = Test::Variant("World");
      |             ^^^^^^^^^^^^^^^^^^^^^^ data-less enum called like a function
      |
      = help: did you mean to write: `Test::Variant`?
    note: defined here
     --> file3.rs:2:5
      |
    2 |     Variant,
      |     ^^^^^^^
    
    error: aborting due to previous error
    ```
    
    Re: #28533
rustc: ./futures-rs-test-all
cargo rustc --test all -- -Ztime-passes -Zinput-stats
   Compiling futures v0.1.0 (file:///root/benchmarks/futures-rs-test-all)
time: 0.002; rss: 43MB	parsing
Lines of code:             412
Pre-expansion node count:  5522
time: 0.000; rss: 43MB	recursion limit
time: 0.000; rss: 43MB	crate injection
time: 0.000; rss: 43MB	plugin loading
time: 0.000; rss: 43MB	plugin registration
time: 0.020; rss: 68MB	expansion
time: 0.001; rss: 68MB	maybe building test harness
time: 0.000; rss: 68MB	maybe creating a macro crate
Post-expansion node count: 10623
time: 0.000; rss: 68MB	checking for inline asm in case the target doesn't support it
time: 0.000; rss: 68MB	complete gated feature checking
time: 0.000; rss: 68MB	early lint checks
time: 0.000; rss: 68MB	AST validation
time: 0.003; rss: 68MB	name resolution
time: 0.001; rss: 68MB	lowering ast -> hir
time: 0.000; rss: 68MB	indexing hir
time: 0.000; rss: 68MB	attribute checking
time: 0.000; rss: 68MB	language item collection
time: 0.000; rss: 68MB	lifetime resolution
time: 0.000; rss: 68MB	looking for entry point
time: 0.000; rss: 68MB	looking for plugin registrar
time: 0.001; rss: 68MB	region resolution
time: 0.000; rss: 68MB	loop checking
time: 0.000; rss: 68MB	static item recursion checking
time: 0.003; rss: 68MB	compute_incremental_hashes_map
time: 0.000; rss: 68MB	load_dep_graph
time: 0.005; rss: 74MB	type collecting
time: 0.000; rss: 74MB	variance inference
time: 0.003; rss: 74MB	coherence checking
time: 0.011; rss: 74MB	wf checking
time: 0.002; rss: 74MB	item-types checking
time: 0.126; rss: 81MB	item-bodies checking
time: 0.000; rss: 81MB	drop-impl checking
time: 0.004; rss: 81MB	const checking
time: 0.000; rss: 81MB	privacy checking
time: 0.000; rss: 81MB	stability index
time: 0.000; rss: 81MB	intrinsic checking
time: 0.000; rss: 81MB	effect checking
time: 0.001; rss: 81MB	match checking
time: 0.001; rss: 80MB	liveness checking
time: 0.003; rss: 80MB	rvalue checking
time: 0.007; rss: 82MB	MIR dump
  time: 0.001; rss: 82MB	SimplifyCfg
  time: 0.001; rss: 82MB	QualifyAndPromoteConstants
  time: 0.002; rss: 82MB	TypeckMir
  time: 0.000; rss: 82MB	SimplifyBranches
  time: 0.000; rss: 82MB	SimplifyCfg
time: 0.005; rss: 82MB	MIR cleanup and validation
time: 0.007; rss: 84MB	borrow checking
time: 0.000; rss: 84MB	reachability checking
time: 0.000; rss: 84MB	death checking
time: 0.001; rss: 84MB	stability checking
time: 0.000; rss: 84MB	unused lib feature checking
time: 0.003; rss: 84MB	lint checking
time: 0.001; rss: 84MB	resolving dependency formats
  time: 0.000; rss: 84MB	NoLandingPads
  time: 0.000; rss: 84MB	SimplifyCfg
  time: 0.001; rss: 84MB	EraseRegions
  time: 0.000; rss: 84MB	AddCallGuards
  time: 0.005; rss: 84MB	ElaborateDrops
  time: 0.000; rss: 84MB	NoLandingPads
  time: 0.001; rss: 84MB	SimplifyCfg
  time: 0.000; rss: 84MB	InstCombine
  time: 0.000; rss: 84MB	Deaggregator
  time: 0.000; rss: 84MB	CopyPropagation
  time: 0.000; rss: 84MB	SimplifyLocals
  time: 0.000; rss: 84MB	AddCallGuards
  time: 0.000; rss: 84MB	PreTrans
time: 0.009; rss: 84MB	MIR optimisations
  time: 0.000; rss: 84MB	write metadata
  time: 0.167; rss: 93MB	translation item collection
  time: 0.019; rss: 95MB	codegen unit partitioning
  time: 0.018; rss: 149MB	internalize symbols
time: 1.214; rss: 149MB	translation
time: 0.000; rss: 149MB	assert dep graph
time: 0.000; rss: 149MB	serialize dep graph
  time: 0.083; rss: 135MB	llvm function passes [0]
  time: 0.027; rss: 136MB	llvm module passes [0]
  time: 1.793; rss: 138MB	codegen passes [0]
  time: 0.000; rss: 138MB	codegen passes [0]
time: 1.905; rss: 138MB	LLVM passes
time: 0.000; rss: 138MB	serialize work products
  time: 0.155; rss: 84MB	running linker
time: 0.157; rss: 84MB	linking
done
